# strava-cli

./: .gitignore  README.md  pyproject.toml
src/st/: __main__.py  cli.py
src/st/auth/: auth_server.py  decorators.py  strava_auth.py
src/st/commands/: login.py  miles.py  shoe.py
src/st/config/: constants.py
src/st/util/: miles_util.py  shoe_util.py  strava_api.py
